[package]
name = "rust-oidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json", "blocking"] }
openidconnect = { version = "2.5.0", default-features = true }
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"] }
serde = "^1.0"
